chore(demo): pnpm

--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taro-app-vite",
+  "name": "@weapp-tailwindcss-demo/taro-app-vite",
   "version": "1.0.0",
   "private": true,
   "description": "",
@@ -49,21 +49,21 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@tarojs/components": "4.1.6",
-    "@tarojs/helper": "4.1.6",
-    "@tarojs/plugin-framework-react": "4.1.6",
-    "@tarojs/plugin-platform-alipay": "4.1.6",
-    "@tarojs/plugin-platform-h5": "4.1.6",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.1.6",
-    "@tarojs/plugin-platform-jd": "4.1.6",
-    "@tarojs/plugin-platform-qq": "4.1.6",
-    "@tarojs/plugin-platform-swan": "4.1.6",
-    "@tarojs/plugin-platform-tt": "4.1.6",
-    "@tarojs/plugin-platform-weapp": "4.1.6",
-    "@tarojs/react": "4.1.6",
-    "@tarojs/runtime": "4.1.6",
-    "@tarojs/shared": "4.1.6",
-    "@tarojs/taro": "4.1.6",
+    "@tarojs/components": "4.1.7",
+    "@tarojs/helper": "4.1.7",
+    "@tarojs/plugin-framework-react": "4.1.7",
+    "@tarojs/plugin-platform-alipay": "4.1.7",
+    "@tarojs/plugin-platform-h5": "4.1.7",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.1.7",
+    "@tarojs/plugin-platform-jd": "4.1.7",
+    "@tarojs/plugin-platform-qq": "4.1.7",
+    "@tarojs/plugin-platform-swan": "4.1.7",
+    "@tarojs/plugin-platform-tt": "4.1.7",
+    "@tarojs/plugin-platform-weapp": "4.1.7",
+    "@tarojs/react": "4.1.7",
+    "@tarojs/runtime": "4.1.7",
+    "@tarojs/shared": "4.1.7",
+    "@tarojs/taro": "4.1.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -71,29 +71,29 @@
     "@babel/core": "^7.28.4",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-react": "^7.27.1",
-    "@tarojs/cli": "4.1.6",
-    "@tarojs/vite-runner": "4.1.6",
+    "@tarojs/cli": "4.1.7",
+    "@tarojs/vite-runner": "4.1.7",
     "@types/react": "^19.1.13",
     "@vitejs/plugin-react": "^5.0.3",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
-    "babel-preset-taro": "4.1.6",
-    "eslint": "^9.35.0",
-    "eslint-config-taro": "4.1.6",
+    "babel-preset-taro": "4.1.7",
+    "eslint": "^9.38.0",
+    "eslint-config-taro": "4.1.7",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "postcss": "^8.5.6",
     "postcss-rem-to-responsive-pixel": "^6.1.0",
     "postcss-rpx-transform": "^1.0.1",
-    "react-refresh": "^0.17.0",
+    "react-refresh": "^0.18.0",
     "sass": "^1.92.1",
-    "stylelint": "^16.24.0",
-    "tailwindcss": "3",
+    "stylelint": "^16.25.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser": "^5.44.0",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.5",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.10",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1"
   }
