--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-app-x-hbuilderx-tailwindcss4",
+  "name": "@weapp-tailwindcss-demo/uni-app-x-hbuilderx-tailwindcss4",
   "version": "0.0.0",
   "private": true,
   "type": "module",
