--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "weapp-workflow",
+  "name": "@weapp-tailwindcss-demo/gulp-app",
   "private": true,
   "version": "0.0.5",
-  "packageManager": "yarn@1.22.22",
   "description": "A workflow for better weapp developing.",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -51,14 +50,14 @@
     "@types/gulp-postcss": "^8.0.6",
     "@types/gulp-rename": "^2.0.6",
     "@types/gulp-replace": "^1.1.0",
-    "@types/gulp-sass": "^5.0.4",
+    "@types/gulp-sass": "^6.0.0",
     "@types/gulp-util": "^3.0.41",
-    "@types/node": "^22.10.7",
+    "@types/node": "^24.8.1",
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.20",
-    "cross-env": "^7.0.3",
-    "del": "^6.1.1",
-    "eslint": "^9.18.0",
+    "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
+    "del": "^8.0.1",
+    "eslint": "^9.38.0",
     "gulp": "^5.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-debug": "^5.0.1",
@@ -73,19 +72,19 @@
     "gulp-sftp": "^0.1.5",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-util": "^3.0.8",
-    "miniprogram-api-typings": "^4.0.4",
+    "miniprogram-api-typings": "^4.1.0",
     "postcss": "^8.5.1",
     "postcss-pxtransform": "^4.0.9",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
+    "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
