--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "mpx-project",
+  "name": "@weapp-tailwindcss-demo/mpx-app",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@1.22.22",
   "author": "ice breaker <1324318532@qq.com>",
   "repository": {
     "type": "git",
@@ -47,7 +46,7 @@
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
     "@mpxjs/mpx-cli-service": "^2.1.21",
-    "@mpxjs/mpx-jest": "^0.0.31",
+    "@mpxjs/mpx-jest": "^0.0.32",
     "@mpxjs/size-report": "^2.9.42",
     "@mpxjs/vue-cli-plugin-mpx": "^2.1.21",
     "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.21",
@@ -56,29 +55,29 @@
     "@mpxjs/webpack-plugin": "^2.9.71",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.20",
-    "babel-jest": "^29.7.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "jest": "^29.7.0",
+    "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.2.0",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
+    "jest": "^30.2.0",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.77.6",
-    "sass-loader": "^16.0.4",
+    "sass-loader": "^16.0.5",
     "stylus": "^0.64.0",
     "stylus-loader": "^8.1.0",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3",
+    "typescript": "^5.9.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.97.1"
+    "webpack": "^5.102.1"
   },
   "browserslist": [
     "ios >= 8",
