--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mpx-project",
+  "name": "@weapp-tailwindcss-demo/mpx-tailwindcss-v4",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -38,17 +38,17 @@
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^7.0.0",
+    "eslint": "^9.38.0",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
     "stylus": "^0.64.0",
     "stylus-loader": "^8.1.1",
     "tailwindcss": "^4.1.14",
     "tailwindcss-patch": "^7.1.6",
-    "typescript": "^4.1.3",
+    "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
-    "webpack": "^5.43.0"
+    "webpack": "^5.102.1"
   },
   "browserslist": [
     "ios >= 8",
