--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-mina",
+  "name": "@weapp-tailwindcss-demo/native-mina",
   "private": true,
   "version": "1.0.0",
   "description": "",
@@ -10,9 +10,9 @@
     "dev": "npm run start",
     "type-check": "tsc --noEmit",
     "start": "webpack --watch --progress",
-    "build": "cross-env NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
-    "build:babel": "cross-env BABEL=1 NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
-    "build:local": "cross-env LOCAL=1 NODE_ENV=production BUILD_TYPE=release webpack && yarn build:npm",
+    "build": "cross-env NODE_ENV=production BUILD_TYPE=release webpack && pnpm run build:npm",
+    "build:babel": "cross-env BABEL=1 NODE_ENV=production BUILD_TYPE=release webpack && pnpm run build:npm",
+    "build:local": "cross-env LOCAL=1 NODE_ENV=production BUILD_TYPE=release webpack && pnpm run build:npm",
     "build:npm": "weapp build-npm -p",
     "preupload": "run-s build",
     "upload": "run-script-os",
@@ -26,7 +26,7 @@
   "sideEffects": false,
   "dependencies": {
     "@vant/weapp": "^1.11.6",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
     "eventemitter3": "^5.0.1",
     "lodash": "^4.17.21",
     "rxjs": "^7.8.1"
@@ -35,41 +35,40 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/lodash": "^4.17.14",
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
+    "autoprefixer": "^10.4.21",
+    "babel-loader": "^10.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "cross-env": "^7.0.3",
+    "copy-webpack-plugin": "^13.0.1",
+    "cross-env": "^10.1.0",
     "ensure-posix-path": "^1.1.1",
     "file-loader": "^6.2.0",
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
     "lodash-webpack-plugin": "^0.11.5",
-    "miniprogram-api-typings": "^4.0.1",
-    "npm-run-all2": "^7.0.2",
+    "miniprogram-api-typings": "^4.1.0",
+    "npm-run-all2": "^8.0.4",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "replace-ext": "^2.0.0",
     "required-path": "^1.0.1",
     "run-script-os": "^1.1.6",
     "sass": "^1.83.1",
-    "sass-loader": "^16.0.4",
-    "tailwindcss": "3",
+    "sass-loader": "^16.0.5",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "^5.7.3",
+    "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.97.1",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-sources": "^3.2.3"
   },
-  "packageManager": "yarn@1.22.22",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
