--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniprogram-ts-quickstart",
+  "name": "@weapp-tailwindcss-demo/native-ts",
   "private": true,
   "version": "1.0.0",
   "description": "",
@@ -14,23 +14,21 @@
   "keywords": [],
   "author": "ice breaker <1324318532@qq.com>",
   "license": "",
-  "dependencies": {},
   "devDependencies": {
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.20",
-    "miniprogram-api-typings": "^4.0.1",
+    "autoprefixer": "^10.4.21",
+    "miniprogram-api-typings": "^4.1.0",
     "postcss": "^8.4.49",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-vite": "^2.0.1"
+    "weapp-vite": "^5.4.0"
   },
-  "packageManager": "yarn@1.22.22",
   "type": "module",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
