--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@rax-materials/scaffolds-app-ts",
+  "name": "@weapp-tailwindcss-demo/rax-app",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "yarn@1.22.22",
   "description": "Rax 无线跨端应用工程，使用 TypeScript。",
   "author": "ice breaker <1324318532@qq.com>",
   "repository": {
@@ -40,15 +39,15 @@
     "@types/rax": "^1.0.18",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.35.0",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
     "postcss": "^8.5.6",
     "postcss-rem-to-responsive-pixel": "^6.1.0",
     "postcss-rpx-transform": "^1.0.1",
     "prettier": "^3.6.2",
     "rax-app": "3.8.22",
-    "stylelint": "^16.24.0",
-    "tailwindcss": "3",
+    "stylelint": "^16.25.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
