--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taro-react",
+  "name": "@weapp-tailwindcss-demo/taro-app",
   "version": "1.0.0",
   "private": true,
   "description": "ge",
@@ -40,10 +40,10 @@
   "author": "ice breaker <1324318532@qq.com>",
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@tarojs/components": "4.1.6",
-    "@tarojs/react": "4.1.6",
-    "@tarojs/runtime": "4.1.6",
-    "@tarojs/taro": "4.1.6",
+    "@tarojs/components": "4.1.7",
+    "@tarojs/react": "4.1.7",
+    "@tarojs/runtime": "4.1.7",
+    "@tarojs/taro": "4.1.7",
     "antd-mobile": "^5.39.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
@@ -54,12 +54,13 @@
     "@babel/core": "^7.28.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
-    "@tarojs/cli": "4.1.6",
+    "@tarojs/cli": "4.1.7",
     "@tarojs/mini-runner": "3.6.37",
-    "@tarojs/plugin-framework-react": "^4.1.6",
-    "@tarojs/plugin-platform-h5": "^4.1.6",
+    "@tarojs/plugin-framework-react": "^4.1.7",
+    "@tarojs/plugin-platform-h5": "^4.1.7",
+    "@tarojs/plugin-platform-weapp": "4.1.7",
     "@tarojs/webpack-runner": "3.6.37",
-    "@tarojs/webpack5-runner": "4.1.6",
+    "@tarojs/webpack5-runner": "4.1.7",
     "@types/react": "^19.1.13",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
@@ -67,34 +68,33 @@
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
     "babel-plugin-import": "^1.13.8",
-    "babel-preset-taro": "4.1.6",
+    "babel-preset-taro": "4.1.7",
     "create-functional-loader": "^0.1.4",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.35.0",
-    "eslint-config-taro": "4.1.6",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
+    "eslint-config-taro": "4.1.7",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "less": "^4.4.1",
     "postcss": "^8.5.6",
     "postcss-rem-to-responsive-pixel": "^6.1.0",
     "postcss-rpx-transform": "^1.0.1",
-    "stylelint": "16.24.0",
-    "tailwindcss": "3",
+    "stylelint": "16.25.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.14",
-    "typescript": "~5.9.2",
+    "typescript": "~5.9.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.101.3",
+    "webpack": "^5.102.1",
     "webpack-chain": "^6.5.1"
   },
   "engines": {
     "node": ">=12.0.0"
   },
-  "packageManager": "yarn@1.22.22",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
