--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "taro-vue3-app",
+  "name": "@weapp-tailwindcss-demo/taro-vue3-app",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "yarn@1.22.22",
   "description": "taro-vue3-app",
   "templateInfo": {
     "name": "default",
@@ -55,46 +54,47 @@
   "dependencies": {
     "@babel/runtime": "^7.28.4",
     "@nutui/nutui-taro": "^4.3.14",
-    "@tarojs/components": "4.1.6",
-    "@tarojs/plugin-framework-vue3": "4.1.6",
-    "@tarojs/plugin-html": "4.1.6",
-    "@tarojs/plugin-platform-h5": "4.1.6",
-    "@tarojs/runtime": "4.1.6",
-    "@tarojs/taro": "4.1.6",
+    "@tarojs/components": "4.1.7",
+    "@tarojs/plugin-framework-vue3": "4.1.7",
+    "@tarojs/plugin-html": "4.1.7",
+    "@tarojs/plugin-platform-h5": "4.1.7",
+    "@tarojs/runtime": "4.1.7",
+    "@tarojs/taro": "4.1.7",
     "vue": "^3.5.21"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/plugin-syntax-decorators": "^7.27.1",
-    "@tarojs/cli": "4.1.6",
+    "@tarojs/cli": "4.1.7",
     "@tarojs/mini-runner": "3.6.37",
-    "@tarojs/webpack5-runner": "^4.1.6",
+    "@tarojs/plugin-platform-weapp": "4.1.7",
+    "@tarojs/webpack5-runner": "^4.1.7",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
-    "@vue/babel-plugin-jsx": "^1.5.0",
+    "@vue/babel-plugin-jsx": "^2.0.1",
     "@vue/compiler-sfc": "^3.5.21",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
-    "babel-preset-taro": "4.1.6",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.35.0",
-    "eslint-config-taro": "4.1.6",
+    "babel-preset-taro": "4.1.7",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.38.0",
+    "eslint-config-taro": "4.1.7",
     "eslint-plugin-vue": "^10.4.0",
     "less": "^4.4.1",
     "postcss": "^8.5.6",
     "postcss-rem-to-responsive-pixel": "^6.1.0",
     "postcss-rpx-transform": "^1.0.1",
-    "stylelint": "16.24.0",
-    "tailwindcss": "3",
+    "stylelint": "16.25.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.9.2",
+    "typescript": "~5.9.3",
     "unplugin-vue-components": "^29.0.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.101.3"
+    "webpack": "^5.102.1"
   }
 }
