--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "taro-webpack-tailwindcss-v4",
+  "name": "@weapp-tailwindcss-demo/taro-webpack-tailwindcss-v4",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "yarn@1.22.22",
   "description": "",
   "templateInfo": {
     "name": "default",
@@ -11,7 +10,7 @@
     "framework": "React"
   },
   "scripts": {
-    "build": "yarn build:weapp",
+    "build": "pnpm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -48,22 +47,22 @@
   "dependencies": {
     "@babel/runtime": "^7.28.4",
     "@nutui/nutui-react-taro": "^3.0.19-cpp-beta.2",
-    "@tarojs/components": "4.1.6",
-    "@tarojs/helper": "4.1.6",
-    "@tarojs/plugin-framework-react": "4.1.6",
-    "@tarojs/plugin-html": "^4.1.6",
-    "@tarojs/plugin-platform-alipay": "4.1.6",
-    "@tarojs/plugin-platform-h5": "4.1.6",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.1.6",
-    "@tarojs/plugin-platform-jd": "4.1.6",
-    "@tarojs/plugin-platform-qq": "4.1.6",
-    "@tarojs/plugin-platform-swan": "4.1.6",
-    "@tarojs/plugin-platform-tt": "4.1.6",
-    "@tarojs/plugin-platform-weapp": "4.1.6",
-    "@tarojs/react": "4.1.6",
-    "@tarojs/runtime": "4.1.6",
-    "@tarojs/shared": "4.1.6",
-    "@tarojs/taro": "4.1.6",
+    "@tarojs/components": "4.1.7",
+    "@tarojs/helper": "4.1.7",
+    "@tarojs/plugin-framework-react": "4.1.7",
+    "@tarojs/plugin-html": "^4.1.7",
+    "@tarojs/plugin-platform-alipay": "4.1.7",
+    "@tarojs/plugin-platform-h5": "4.1.7",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.1.7",
+    "@tarojs/plugin-platform-jd": "4.1.7",
+    "@tarojs/plugin-platform-qq": "4.1.7",
+    "@tarojs/plugin-platform-swan": "4.1.7",
+    "@tarojs/plugin-platform-tt": "4.1.7",
+    "@tarojs/plugin-platform-weapp": "4.1.7",
+    "@tarojs/react": "4.1.7",
+    "@tarojs/runtime": "4.1.7",
+    "@tarojs/shared": "4.1.7",
+    "@tarojs/taro": "4.1.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -73,27 +72,27 @@
     "@babel/preset-react": "^7.27.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@tailwindcss/postcss": "^4.1.14",
-    "@tarojs/cli": "4.1.6",
-    "@tarojs/taro-loader": "4.1.6",
-    "@tarojs/webpack5-runner": "4.1.6",
-    "@types/node": "^24.5.1",
+    "@tarojs/cli": "4.1.7",
+    "@tarojs/taro-loader": "4.1.7",
+    "@tarojs/webpack5-runner": "4.1.7",
+    "@types/node": "^24.8.1",
     "@types/react": "^19.1.13",
     "@types/webpack-env": "^1.13.6",
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "babel-preset-taro": "4.1.6",
-    "eslint": "^9.35.0",
-    "eslint-config-taro": "4.1.6",
+    "babel-preset-taro": "4.1.7",
+    "eslint": "^9.38.0",
+    "eslint-config-taro": "4.1.7",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.0",
     "postcss": "^8.5.6",
-    "react-refresh": "^0.17.0",
-    "stylelint": "^16.24.0",
+    "react-refresh": "^0.18.0",
+    "stylelint": "^16.25.0",
     "tailwindcss": "^4.1.14",
     "tailwindcss-patch": "^7.1.6",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
-    "webpack": "5.101.3"
+    "webpack": "5.102.1"
   }
 }
