--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-preset-vue",
+  "name": "@weapp-tailwindcss-demo/uni-app-vue3-vite",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -59,14 +59,14 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4070620250821001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4070620250821001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
-    "@weapp-core/escape": "^2.1.0",
+    "@weapp-core/escape": "^4.0.1",
     "clipboard": "^2.0.11",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.18",
     "eventemitter3": "^5.0.1",
-    "htmlparser2": "^9.1.0",
+    "htmlparser2": "^10.0.0",
     "magic-string": "^0.30.8",
-    "miniprogram-computed": "^4.4.0",
-    "p-queue": "8.0.1",
+    "miniprogram-computed": "^7.1.0",
+    "p-queue": "9.0.0",
     "tailwind-merge": "^2.6.0",
     "uview-plus": "^3.1.45",
     "vk-uview-ui": "^1.5.2",
@@ -88,23 +88,24 @@
     "@vue/runtime-core": "^3.4.21",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "@weapp-tailwindcss/typography": "^0.2.4",
-    "autoprefixer": "^10.4.18",
-    "miniprogram-api-typings": "^3.12.2",
+    "autoprefixer": "^10.4.21",
+    "domelementtype": "^2.3.0",
+    "miniprogram-api-typings": "^4.1.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.35",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.71.1",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.4.2",
+    "typescript": "~5.9.3",
     "vite": "5.2.8",
-    "vite-plugin-inspect": "^0.8.9",
+    "vite-plugin-inspect": "^11.3.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
   },
-  "packageManager": "yarn@1.22.22",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
