--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "@weapp-tailwindcss-demo/uni-app-webpack-tailwindcss-v4",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -74,8 +74,8 @@
     "core-js": "^3.8.3",
     "flyio": "^0.6.2",
     "vue": ">= 2.6.14 < 2.7",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^8.0.0",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
@@ -98,14 +98,14 @@
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "babel-plugin-import": "^1.11.0",
-    "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
     "postcss": "^8.5.3",
     "postcss-comment": "^2.0.0",
     "tailwindcss": "^4.1.14",
     "tailwindcss-patch": "^7.1.6",
-    "typescript": "~4.5.5",
-    "vue-template-compiler": ">= 2.6.14 < 2.7",
+    "typescript": "~5.9.3",
+    "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1"
   },
