--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-app-webpack5",
+  "name": "@weapp-tailwindcss-demo/uni-app-webpack5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -80,13 +80,13 @@
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.14.1",
     "vue": ">= 2.6.14 < 2.7",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^8.0.0",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.23.3",
-    "@babel/runtime": "~7.25.0",
+    "@babel/runtime": "~7.28.4",
     "@dcloudio/types": "^3.4.8",
     "@dcloudio/uni-automator": "2.0.2-4070620250821001",
     "@dcloudio/uni-cli-i18n": "2.0.2-4070620250821001",
@@ -103,21 +103,21 @@
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "babel-plugin-import": "^1.11.0",
-    "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
     "mini-css-extract-plugin": "^2.8.1",
     "mini-types": "*",
-    "miniprogram-api-typings": "3.12.3",
+    "miniprogram-api-typings": "4.1.0",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.71.1",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.4.2",
-    "vue-template-compiler": ">= 2.6.14 < 2.7",
+    "typescript": "~5.9.3",
+    "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
@@ -132,7 +132,6 @@
   "uni-app": {
     "scripts": {}
   },
-  "packageManager": "yarn@1.22.22",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
