--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-app-x-hbuilderx-tailwindcss3",
+  "name": "@weapp-tailwindcss-demo/uni-app-x-hbuilderx-tailwindcss3",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1"
