--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-app",
+  "name": "@weapp-tailwindcss-demo/uni-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -84,7 +84,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.23.3",
-    "@babel/runtime": "~7.25.0",
+    "@babel/runtime": "~7.28.4",
     "@dcloudio/types": "3.4.12",
     "@dcloudio/uni-automator": "2.0.2-4070620250821001",
     "@dcloudio/uni-cli-i18n": "2.0.2-4070620250821001",
@@ -102,23 +102,23 @@
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "10.4.18",
+    "autoprefixer": "10.4.21",
     "babel-plugin-import": "^1.11.0",
-    "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
     "mini-types": "*",
-    "miniprogram-api-typings": "3.12.3",
+    "miniprogram-api-typings": "4.1.0",
     "postcss": "8.4.49",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.71.1",
-    "sass-loader": "14.2.1",
+    "sass-loader": "16.0.5",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.4.2",
+    "typescript": "~5.9.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
@@ -131,7 +131,6 @@
   "uni-app": {
     "scripts": {}
   },
-  "packageManager": "yarn@1.22.22",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
