--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@weapp-tailwindcss-demo/web",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -17,14 +17,13 @@
     "@weapp-tailwindcss/merge": "^1.3.0",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
-    "tailwindcss": "3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
     "weapp-tailwindcss": "^4.5.1",
     "weapp-tailwindcss-children": "^0.1.0"
   },
-  "packageManager": "yarn@1.22.22",
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
