chore: fix demo gulp build

--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -26,14 +26,14 @@
   ],
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env WATCH=1 gulp",
-    "dev:debug": "cross-env WATCH=1 DEBUG=weapp-tw gulp",
-    "dev:tt": "cross-env WATCH=1 PLATFORM=tt gulp",
-    "dev:local": "cross-env WATCH=1 LOCAL=1 gulp",
-    "build:local": "cross-env LOCAL=1 gulp",
-    "build": "gulp",
-    "build:babel": "cross-env BABEL=1 gulp",
-    "build:tt": "cross-env PLATFORM=tt gulp",
+    "dev": "cross-env WATCH=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev:debug": "cross-env WATCH=1 DEBUG=weapp-tw gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev:tt": "cross-env WATCH=1 PLATFORM=tt gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev:local": "cross-env WATCH=1 LOCAL=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "build:local": "cross-env LOCAL=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "build": "gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "build:babel": "cross-env BABEL=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "build:tt": "cross-env PLATFORM=tt gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
     "prepare": "weapp-tw patch",
     "open": "weapp open -p"
   },
@@ -56,9 +56,8 @@
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.1.0",
-    "del": "^8.0.1",
     "eslint": "^9.38.0",
-    "gulp": "^5.0.0",
+    "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-debug": "^5.0.1",
     "gulp-if": "^3.0.0",
@@ -82,7 +81,6 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
