--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -44,15 +44,15 @@
     "@babel/runtime-corejs3": "^7.28.4",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
-    "@mpxjs/miniprogram-simulate": "^1.4.17",
-    "@mpxjs/mpx-cli-service": "^2.1.21",
+    "@mpxjs/miniprogram-simulate": "1.4.20",
+    "@mpxjs/mpx-cli-service": "2.2.3",
     "@mpxjs/mpx-jest": "^0.0.32",
     "@mpxjs/size-report": "^2.9.42",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.1.21",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.21",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.21",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.21",
-    "@mpxjs/webpack-plugin": "^2.9.71",
+    "@mpxjs/vue-cli-plugin-mpx": "2.2.3",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "2.2.3",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "2.2.3",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "2.2.3",
+    "@mpxjs/webpack-plugin": "2.10.16",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "^1.3.0",
     "autoprefixer": "^10.4.21",
