--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -92,6 +92,7 @@
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser": "^5.44.0",
+    "to-fast-properties": "3.0.1",
     "typescript": "^5.9.3",
     "vite": "^7.1.10",
     "weapp-ide-cli": "^4.0.0",
