--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -32,7 +32,12 @@
     "rax-image": "^2.4.3",
     "rax-link": "^1.0.1",
     "rax-text": "^2.0.0",
-    "rax-view": "^2.0.0"
+    "rax-view": "^2.0.0",
+    "create-app-shared": "^1.3.2",
+    "driver-universal": "^3.5.0",
+    "miniapp-renderer": "^0.2.2",
+    "rax-app-renderer": "^3.0.3",
+    "rax-use-router": "^3.1.2"
   },
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
