--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -27,17 +27,17 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "create-app-shared": "^1.3.2",
+    "driver-universal": "^3.5.0",
+    "miniapp-renderer": "^0.2.2",
     "rax": "^1.2.3",
+    "rax-app-renderer": "^3.0.3",
     "rax-document": "^0.1.0",
     "rax-image": "^2.4.3",
     "rax-link": "^1.0.1",
     "rax-text": "^2.0.0",
-    "rax-view": "^2.0.0",
-    "create-app-shared": "^1.3.2",
-    "driver-universal": "^3.5.0",
-    "miniapp-renderer": "^0.2.2",
-    "rax-app-renderer": "^3.0.3",
-    "rax-use-router": "^3.1.2"
+    "rax-use-router": "^3.1.2",
+    "rax-view": "^2.0.0"
   },
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
@@ -52,11 +52,11 @@
     "prettier": "^3.6.2",
     "rax-app": "3.8.22",
     "stylelint": "^16.25.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.1",
+    "weapp-tailwindcss": "^4.5.2",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "originTemplate": "@rax-materials/scaffolds-app-ts"
