chore: upgrade gulp to 5.x

--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -26,14 +26,14 @@
   ],
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env WATCH=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "dev:debug": "cross-env WATCH=1 DEBUG=weapp-tw gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "dev:tt": "cross-env WATCH=1 PLATFORM=tt gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "dev:local": "cross-env WATCH=1 LOCAL=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "build:local": "cross-env LOCAL=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "build": "gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "build:babel": "cross-env BABEL=1 gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
-    "build:tt": "cross-env PLATFORM=tt gulp --require tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev": "cross-env WATCH=1 gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev:debug": "cross-env WATCH=1 DEBUG=weapp-tw gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev:tt": "cross-env WATCH=1 PLATFORM=tt gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "dev:local": "cross-env WATCH=1 LOCAL=1 gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "build:local": "cross-env LOCAL=1 gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "build": "gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "build:babel": "cross-env BABEL=1 gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
+    "build:tt": "cross-env PLATFORM=tt gulp --preload tsx/dist/loader.cjs -f gulpfile.ts",
     "prepare": "weapp-tw patch",
     "open": "weapp open -p"
   },
@@ -57,7 +57,7 @@
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.1.0",
     "eslint": "^9.38.0",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.1",
     "gulp-cached": "^1.1.1",
     "gulp-debug": "^5.0.1",
     "gulp-if": "^3.0.0",
