--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -67,7 +67,8 @@
     "magic-string": "^0.30.8",
     "miniprogram-computed": "^7.1.0",
     "p-queue": "9.0.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-merge-v2": "npm:tailwind-merge@^2.6.0",
     "uview-plus": "^3.1.45",
     "vk-uview-ui": "^1.5.2",
     "vue": "^3.4.21",
