--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -106,6 +106,7 @@
     "babel-plugin-import": "^1.13.8",
     "cross-env": "^7.0.3",
     "jest": "^25.5.4",
+    "lru-cache": "^5.1.1",
     "mini-types": "*",
     "miniprogram-api-typings": "4.1.0",
     "postcss": "8.4.49",
