--- a/demo/native/package.json
+++ b/demo/native/package.json
@@ -18,7 +18,7 @@
     "tailwindcss-patch": "^7.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2",
+    "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "bugs": {
