--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build": "turbo run build --filter=!./demo/*",
     "build:docs": "turbo run build --filter=./website/",
     "build:apps": "turbo run build --filter=./apps/*",
-    "build:pkg": "turbo run build --filter=./packages/*",
+    "build:pkgs": "turbo run build --filter=./packages/*",
     "build:demo": "turbo run build --filter=./demo/*",
     "build:analyze": "tsx scripts/check-build-size.ts",
     "test": "vitest run",
