--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -60,7 +60,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2",
+    "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
