--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -96,6 +96,6 @@
     "typescript": "^5.9.3",
     "vite": "^7.1.11",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2"
+    "weapp-tailwindcss": "workspace:*"
   }
 }
