--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -88,7 +88,7 @@
     "terser-webpack-plugin": "^5.3.14",
     "typescript": "~5.9.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2",
+    "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.102.1",
     "webpack-chain": "^6.5.1"
