--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -94,7 +94,7 @@
     "unplugin-vue-components": "^29.0.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2",
+    "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.102.1"
   }
