--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -92,7 +92,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2",
+    "weapp-tailwindcss": "workspace:*",
     "webpack": "5.102.1"
   }
 }
