--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -82,6 +82,6 @@
     "vite": "7.1.11",
     "vue-tsc": "^3.1.1",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2"
+    "weapp-tailwindcss": "workspace:*"
   }
 }
