--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -109,7 +109,7 @@
     "typescript": "~5.9.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.5.2"
+    "weapp-tailwindcss": "workspace:*"
   },
   "browserslist": [
     "Android >= 4.4",
