chore(demo): "libVersion": "3.10.3"

--- a/demo/native/project.config.json
+++ b/demo/native/project.config.json
@@ -1,6 +1,6 @@
 {
   "compileType": "miniprogram",
-  "libVersion": "trial",
+  "libVersion": "3.10.3",
   "packOptions": {
     "ignore": [],
     "include": []
