--- a/demo/uni-app-vue3-vite/src/manifest.json
+++ b/demo/uni-app-vue3-vite/src/manifest.json
@@ -51,6 +51,7 @@
   /* 小程序特有相关 */
   "mp-weixin": {
     "appid": "wxb3d842a4a7e3440d",
+    "libVersion": "3.10.3",
     "setting": {
       "urlCheck": false,
       "es6": false
