--- a/demo/uni-app-webpack-tailwindcss-v4/src/manifest.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/src/manifest.json
@@ -50,6 +50,7 @@
     "mp-weixin": { /* 小程序特有相关 */
         "usingComponents":true,
         "appid": "wxb3d842a4a7e3440d",
+        "libVersion": "3.10.3",
         "setting" : {
         	"urlCheck" : true
         }
