--- a/demo/mpx-tailwindcss-v4/static/swan/project.swan.json
+++ b/demo/mpx-tailwindcss-v4/static/swan/project.swan.json
@@ -7,7 +7,7 @@
     "options": [],
     "selected": -3
   },
-  "projectname": "mpx-project",
+  "projectname": "mpx-tailwindcss-v4-swan",
   "setting": {
     "urlCheck": true
   }
