--- a/demo/taro-app/project.tt.json
+++ b/demo/taro-app/project.tt.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./",
-  "projectname": "taro-app",
+  "projectname": "taro-app-tt",
   "description": "ge",
   "appid": "touristappid",
   "setting": {
