--- a/demo/taro-app/project.config.json
+++ b/demo/taro-app/project.config.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "dist/",
-  "projectname": "taro-app",
+  "projectname": "taro-app-weapp",
   "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "appid": "wxb3d842a4a7e3440d",
   "setting": {
