--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -23,7 +23,7 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "catalog:babelCore7285",
     "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/runtime-corejs3": "^7.27.0",
@@ -34,17 +34,17 @@
     "@mpxjs/vue-cli-plugin-mpx": "^2.1.28",
     "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.28",
     "@mpxjs/webpack-plugin": "^2.10.3",
-    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
     "eslint": "^9.38.0",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-patch": "^8.1.0",
-    "typescript": "^5.9.3",
-    "weapp-ide-cli": "^4.0.0",
+    "tailwindcss": "catalog:tailwindcss4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "typescript": "catalog:typescript59",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
     "webpack": "^5.102.1"
   },
