--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -86,7 +86,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.23.3",
-    "@babel/runtime": "~7.28.4",
+    "@babel/runtime": "catalog:babelRuntime7284tilde",
     "@dcloudio/types": "^3.4.8",
     "@dcloudio/uni-automator": "2.0.2-4070620250821001",
     "@dcloudio/uni-cli-i18n": "2.0.2-4070620250821001",
@@ -101,26 +101,26 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.3.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "babel-plugin-import": "^1.13.8",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "jest": "^25.5.4",
     "mini-css-extract-plugin": "^2.8.1",
     "mini-types": "*",
-    "miniprogram-api-typings": "4.1.0",
-    "postcss-comment": "^2.0.0",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
+    "miniprogram-api-typings": "catalog:miniApiTypings",
+    "postcss-comment": "catalog:postcssComment2",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "sass": "^1.71.1",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.9.3",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "typescript": "catalog:typescript59tilde",
     "vue-template-compiler": "^2.7.16",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss-children": "catalog:weappChildren"
   },
   "browserslist": [
     "Android >= 4.4",
