--- a/how-to-build-components-by-tailwindcss/react-lib/package.json
+++ b/how-to-build-components-by-tailwindcss/react-lib/package.json
@@ -48,11 +48,11 @@
     "postcss": "^8.4.31",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "catalog:tailwindcss3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.6.0",
-    "@tarojs/components": "^3.6.17"
+    "@tarojs/components": "catalog:taro36legacy"
   },
   "dependencies": {},
   "bugs": {
