--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -195,7 +195,7 @@
     "lru-cache": "10.4.3",
     "magic-string": "0.30.21",
     "semver": "~7.7.3",
-    "tailwindcss-patch": "~8.1.0",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
     "vue": "^3.5.22",
     "webpack-sources": "3.3.3"
   },
