--- a/apps/rsmax-app-ts/package.json
+++ b/apps/rsmax-app-ts/package.json
@@ -21,11 +21,11 @@
   },
   "devDependencies": {
     "@types/react": "catalog:react18",
-    "autoprefixer": "^10.4.21",
-    "cross-env": "^10.1.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "^5.9.3",
+    "autoprefixer": "catalog:autoprefixer10",
+    "cross-env": "catalog:crossEnv",
+    "postcss": "catalog:postcss85",
+    "tailwindcss": "catalog:tailwindcss3",
+    "typescript": "catalog:typescript59",
     "weapp-tailwindcss": "workspace:*"
   }
 }
