--- a/apps/weapp-wechat-zhihu/package.json
+++ b/apps/weapp-wechat-zhihu/package.json
@@ -23,7 +23,7 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "miniprogram-api-typings": "^4.1.0",
-    "weapp-vite": "^5.6.0"
+    "miniprogram-api-typings": "catalog:miniApiTypings",
+    "weapp-vite": "catalog:weappVite"
   }
 }
