--- a/apps/web-postcss7-compat/package.json
+++ b/apps/web-postcss7-compat/package.json
@@ -22,10 +22,10 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "tailwindcss-patch": "^8.1.0"
+    "tailwindcss-patch": "catalog:tailwindcssPatch"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "catalog:autoprefixer10",
     "postcss7": "npm:postcss@^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "weapp-tailwindcss": "workspace:^"
