--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -53,9 +53,9 @@
     "@types/gulp-sass": "^6.0.0",
     "@types/gulp-util": "^3.0.41",
     "@types/node": "^24.9.1",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
-    "cross-env": "^10.1.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
+    "cross-env": "catalog:crossEnv",
     "eslint": "^9.38.0",
     "gulp": "^5.0.1",
     "gulp-cached": "^1.1.1",
@@ -70,20 +70,20 @@
     "gulp-sftp": "^0.1.5",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-util": "^3.0.8",
-    "miniprogram-api-typings": "^4.1.0",
+    "miniprogram-api-typings": "catalog:miniApiTypings",
     "postcss": "^8.5.1",
     "postcss-pxtransform": "^4.0.9",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "tsx": "^4.19.2",
-    "typescript": "^5.9.3",
-    "weapp-ide-cli": "^4.0.0",
+    "typescript": "catalog:typescript59",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss-children": "catalog:weappChildren"
   }
 }
