--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -54,27 +54,27 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "2.2.3",
     "@mpxjs/webpack-plugin": "2.10.16",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
     "babel-jest": "^30.2.0",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "eslint": "^9.38.0",
     "jest": "^30.2.0",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "sass": "^1.77.6",
     "sass-loader": "^16.0.6",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.9.3",
+    "typescript": "catalog:typescript59",
     "vue-template-compiler": "^2.7.16",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "^5.102.1"
   },
   "browserslist": [
