--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -33,35 +33,35 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/lodash": "^4.17.14",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
     "babel-loader": "^10.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^13.0.1",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "ensure-posix-path": "^1.1.1",
     "file-loader": "^6.2.0",
     "jest": "^30.2.0",
     "lodash-webpack-plugin": "^0.11.5",
-    "miniprogram-api-typings": "^4.1.0",
+    "miniprogram-api-typings": "catalog:miniApiTypings",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "replace-ext": "^2.0.0",
     "required-path": "^1.0.1",
     "run-script-os": "^1.1.6",
     "sass": "^1.83.1",
     "sass-loader": "^16.0.6",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "^5.9.3",
-    "weapp-ide-cli": "^4.0.0",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "typescript": "catalog:typescript59",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-sources": "^3.2.3"
