--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -15,19 +15,19 @@
   "author": "ice breaker <1324318532@qq.com>",
   "license": "",
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
-    "miniprogram-api-typings": "^4.1.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
+    "miniprogram-api-typings": "catalog:miniApiTypings",
     "postcss": "^8.4.49",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "weapp-ide-cli": "^4.0.0",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-vite": "^5.6.0"
+    "weapp-tailwindcss-children": "catalog:weappChildren",
+    "weapp-vite": "catalog:weappVite"
   },
   "type": "module",
   "bugs": {
