--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -42,22 +42,22 @@
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.18",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
-    "cross-env": "^10.1.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
+    "cross-env": "catalog:crossEnv",
     "eslint": "^9.38.0",
-    "postcss": "^8.5.6",
-    "postcss-rem-to-responsive-pixel": "^6.1.0",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss": "catalog:postcss85",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "prettier": "^3.6.2",
     "rax-app": "3.8.22",
-    "stylelint": "^16.25.0",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "weapp-ide-cli": "^4.0.0",
+    "stylelint": "catalog:stylelint1625",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss-children": "catalog:weappChildren"
   },
   "originTemplate": "@rax-materials/scaffolds-app-ts"
 }
