--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -48,54 +48,54 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
-    "@tarojs/components": "4.1.7",
-    "@tarojs/helper": "4.1.7",
-    "@tarojs/plugin-framework-react": "4.1.7",
-    "@tarojs/plugin-platform-alipay": "4.1.7",
-    "@tarojs/plugin-platform-h5": "4.1.7",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.1.7",
-    "@tarojs/plugin-platform-jd": "4.1.7",
-    "@tarojs/plugin-platform-qq": "4.1.7",
-    "@tarojs/plugin-platform-swan": "4.1.7",
-    "@tarojs/plugin-platform-tt": "4.1.7",
-    "@tarojs/plugin-platform-weapp": "4.1.7",
-    "@tarojs/react": "4.1.7",
-    "@tarojs/runtime": "4.1.7",
-    "@tarojs/shared": "4.1.7",
-    "@tarojs/taro": "4.1.7",
+    "@babel/runtime": "catalog:babelRuntime7284",
+    "@tarojs/components": "catalog:taro4",
+    "@tarojs/helper": "catalog:taro4",
+    "@tarojs/plugin-framework-react": "catalog:taro4",
+    "@tarojs/plugin-platform-alipay": "catalog:taro4",
+    "@tarojs/plugin-platform-h5": "catalog:taro4",
+    "@tarojs/plugin-platform-harmony-hybrid": "catalog:taro4",
+    "@tarojs/plugin-platform-jd": "catalog:taro4",
+    "@tarojs/plugin-platform-qq": "catalog:taro4",
+    "@tarojs/plugin-platform-swan": "catalog:taro4",
+    "@tarojs/plugin-platform-tt": "catalog:taro4",
+    "@tarojs/plugin-platform-weapp": "catalog:taro4",
+    "@tarojs/react": "catalog:taro4",
+    "@tarojs/runtime": "catalog:taro4",
+    "@tarojs/shared": "catalog:taro4",
+    "@tarojs/taro": "catalog:taro4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "catalog:babelCore7285",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/preset-react": "^7.28.5",
-    "@tarojs/cli": "4.1.7",
-    "@tarojs/vite-runner": "4.1.7",
+    "@babel/preset-react": "catalog:babelPresetReact7285",
+    "@tarojs/cli": "catalog:taro4",
+    "@tarojs/vite-runner": "catalog:taro4",
     "@types/react": "^19.1.13",
     "@vitejs/plugin-react": "^5.1.0",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
     "babel-preset-taro": "4.1.7",
     "eslint": "^9.38.0",
     "eslint-config-taro": "4.1.7",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "postcss": "^8.5.6",
-    "postcss-rem-to-responsive-pixel": "^6.1.0",
-    "postcss-rpx-transform": "^1.0.1",
-    "react-refresh": "^0.18.0",
+    "postcss": "catalog:postcss85",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
+    "postcss-rpx-transform": "catalog:postcssRpx",
+    "react-refresh": "catalog:reactRefresh018",
     "sass": "^1.92.1",
-    "stylelint": "^16.25.0",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
+    "stylelint": "catalog:stylelint1625",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "terser": "^5.44.0",
     "to-fast-properties": "3.0.1",
-    "typescript": "^5.9.3",
+    "typescript": "catalog:typescript59",
     "vite": "^7.1.12",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   }
 }
