--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -39,12 +39,12 @@
   ],
   "author": "ice breaker <1324318532@qq.com>",
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
-    "@tarojs/components": "4.1.7",
-    "@tarojs/react": "4.1.7",
-    "@tarojs/runtime": "4.1.7",
-    "@tarojs/shared": "4.1.7",
-    "@tarojs/taro": "4.1.7",
+    "@babel/runtime": "catalog:babelRuntime7284",
+    "@tarojs/components": "catalog:taro4",
+    "@tarojs/react": "catalog:taro4",
+    "@tarojs/runtime": "catalog:taro4",
+    "@tarojs/shared": "catalog:taro4",
+    "@tarojs/taro": "catalog:taro4",
     "antd-mobile": "^5.39.0",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
@@ -52,44 +52,44 @@
     "taro-hooks": "2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "catalog:babelCore7285",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
-    "@tarojs/cli": "4.1.7",
-    "@tarojs/mini-runner": "3.6.37",
-    "@tarojs/plugin-framework-react": "^4.1.7",
-    "@tarojs/plugin-platform-h5": "^4.1.7",
-    "@tarojs/plugin-platform-weapp": "4.1.7",
-    "@tarojs/webpack-runner": "3.6.37",
-    "@tarojs/webpack5-runner": "4.1.7",
+    "@tarojs/cli": "catalog:taro4",
+    "@tarojs/mini-runner": "catalog:taro36",
+    "@tarojs/plugin-framework-react": "catalog:taro4",
+    "@tarojs/plugin-platform-h5": "catalog:taro4",
+    "@tarojs/plugin-platform-weapp": "catalog:taro4",
+    "@tarojs/webpack-runner": "catalog:taro36",
+    "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/react": "^19.1.13",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "4.1.7",
     "create-functional-loader": "^0.1.4",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "eslint": "^9.38.0",
     "eslint-config-taro": "4.1.7",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "less": "^4.4.1",
-    "postcss": "^8.5.6",
-    "postcss-rem-to-responsive-pixel": "^6.1.0",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss": "catalog:postcss85",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "stylelint": "16.25.0",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "terser-webpack-plugin": "^5.3.14",
-    "typescript": "~5.9.3",
-    "weapp-ide-cli": "^4.0.0",
+    "typescript": "catalog:typescript59tilde",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "^5.102.1",
     "webpack-chain": "^6.5.1"
   },
