--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -52,50 +52,50 @@
   ],
   "__comment": {},
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
+    "@babel/runtime": "catalog:babelRuntime7284",
     "@nutui/nutui-taro": "^4.3.14",
-    "@tarojs/components": "4.1.7",
-    "@tarojs/plugin-framework-vue3": "4.1.7",
-    "@tarojs/plugin-html": "4.1.7",
-    "@tarojs/plugin-platform-h5": "4.1.7",
-    "@tarojs/runtime": "4.1.7",
-    "@tarojs/shared": "4.1.7",
-    "@tarojs/taro": "4.1.7",
+    "@tarojs/components": "catalog:taro4",
+    "@tarojs/plugin-framework-vue3": "catalog:taro4",
+    "@tarojs/plugin-html": "catalog:taro4",
+    "@tarojs/plugin-platform-h5": "catalog:taro4",
+    "@tarojs/runtime": "catalog:taro4",
+    "@tarojs/shared": "catalog:taro4",
+    "@tarojs/taro": "catalog:taro4",
     "vue": "^3.5.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "catalog:babelCore7285",
     "@babel/plugin-syntax-decorators": "^7.27.1",
-    "@tarojs/cli": "4.1.7",
-    "@tarojs/mini-runner": "3.6.37",
-    "@tarojs/plugin-platform-weapp": "4.1.7",
-    "@tarojs/webpack5-runner": "^4.1.7",
+    "@tarojs/cli": "catalog:taro4",
+    "@tarojs/mini-runner": "catalog:taro36",
+    "@tarojs/plugin-platform-weapp": "catalog:taro4",
+    "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vue/babel-plugin-jsx": "^2.0.1",
     "@vue/compiler-sfc": "^3.5.21",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "autoprefixer": "^10.4.21",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "autoprefixer": "catalog:autoprefixer10",
     "babel-preset-taro": "4.1.7",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "eslint": "^9.38.0",
     "eslint-config-taro": "4.1.7",
     "eslint-plugin-vue": "^10.4.0",
     "less": "^4.4.1",
-    "postcss": "^8.5.6",
-    "postcss-rem-to-responsive-pixel": "^6.1.0",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss": "catalog:postcss85",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "stylelint": "16.25.0",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.9.3",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "typescript": "catalog:typescript59tilde",
     "unplugin-vue-components": "^30.0.0",
     "vue-loader": "^17.2.2",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "^5.102.1"
   }
 }
