--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -45,53 +45,53 @@
   },
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
+    "@babel/runtime": "catalog:babelRuntime7284",
     "@nutui/nutui-react-taro": "^3.0.19-cpp-beta.2",
-    "@tarojs/components": "4.1.7",
-    "@tarojs/helper": "4.1.7",
-    "@tarojs/plugin-framework-react": "4.1.7",
-    "@tarojs/plugin-html": "^4.1.7",
-    "@tarojs/plugin-platform-alipay": "4.1.7",
-    "@tarojs/plugin-platform-h5": "4.1.7",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.1.7",
-    "@tarojs/plugin-platform-jd": "4.1.7",
-    "@tarojs/plugin-platform-qq": "4.1.7",
-    "@tarojs/plugin-platform-swan": "4.1.7",
-    "@tarojs/plugin-platform-tt": "4.1.7",
-    "@tarojs/plugin-platform-weapp": "4.1.7",
-    "@tarojs/react": "4.1.7",
-    "@tarojs/runtime": "4.1.7",
-    "@tarojs/shared": "4.1.7",
-    "@tarojs/taro": "4.1.7",
+    "@tarojs/components": "catalog:taro4",
+    "@tarojs/helper": "catalog:taro4",
+    "@tarojs/plugin-framework-react": "catalog:taro4",
+    "@tarojs/plugin-html": "catalog:taro4",
+    "@tarojs/plugin-platform-alipay": "catalog:taro4",
+    "@tarojs/plugin-platform-h5": "catalog:taro4",
+    "@tarojs/plugin-platform-harmony-hybrid": "catalog:taro4",
+    "@tarojs/plugin-platform-jd": "catalog:taro4",
+    "@tarojs/plugin-platform-qq": "catalog:taro4",
+    "@tarojs/plugin-platform-swan": "catalog:taro4",
+    "@tarojs/plugin-platform-tt": "catalog:taro4",
+    "@tarojs/plugin-platform-weapp": "catalog:taro4",
+    "@tarojs/react": "catalog:taro4",
+    "@tarojs/runtime": "catalog:taro4",
+    "@tarojs/shared": "catalog:taro4",
+    "@tarojs/taro": "catalog:taro4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "catalog:babelCore7285",
     "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-react": "catalog:babelPresetReact7285",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
-    "@tailwindcss/postcss": "^4.1.16",
-    "@tarojs/cli": "4.1.7",
-    "@tarojs/taro-loader": "4.1.7",
-    "@tarojs/webpack5-runner": "4.1.7",
+    "@tailwindcss/postcss": "catalog:tailwindcss4",
+    "@tarojs/cli": "catalog:taro4",
+    "@tarojs/taro-loader": "catalog:taro4",
+    "@tarojs/webpack5-runner": "catalog:taro4",
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.13",
     "@types/webpack-env": "^1.13.6",
-    "@weapp-tailwindcss/merge": "^1.3.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "babel-preset-taro": "4.1.7",
     "eslint": "^9.38.0",
     "eslint-config-taro": "4.1.7",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "postcss": "^8.5.6",
-    "react-refresh": "^0.18.0",
-    "stylelint": "^16.25.0",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-patch": "^8.1.0",
+    "postcss": "catalog:postcss85",
+    "react-refresh": "catalog:reactRefresh018",
+    "stylelint": "catalog:stylelint1625",
+    "tailwindcss": "catalog:tailwindcss4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.9.3",
-    "weapp-ide-cli": "^4.0.0",
+    "typescript": "catalog:typescript59",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
     "webpack": "5.102.1"
   }
