--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -72,16 +72,16 @@
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@iconify-json/lucide": "^1.2.71",
     "@iconify-json/mdi": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.16",
+    "@tailwindcss/vite": "catalog:tailwindcss4",
     "@vue/runtime-core": "3.4.21",
     "@vue/tsconfig": "^0.8.1",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-patch": "^8.1.0",
-    "typescript": "^5.9.3",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "tailwindcss": "catalog:tailwindcss4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "typescript": "catalog:typescript59",
     "vite": "7.1.12",
     "vue-tsc": "^3.1.2",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   }
 }
