--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -67,7 +67,7 @@
     "magic-string": "^0.30.21",
     "miniprogram-computed": "^7.1.0",
     "p-queue": "9.0.0",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "catalog:tailwindMerge",
     "tailwind-merge-v2": "npm:tailwind-merge@^2.6.0",
     "uview-plus": "^3.1.45",
     "vk-uview-ui": "^1.5.2",
@@ -87,25 +87,25 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@vue/runtime-core": "^3.5.22",
-    "@weapp-tailwindcss/merge": "^1.3.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "@weapp-tailwindcss/typography": "^0.2.4",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "catalog:autoprefixer10",
     "domelementtype": "^2.3.0",
-    "miniprogram-api-typings": "^4.1.0",
+    "miniprogram-api-typings": "catalog:miniApiTypings",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.35",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
     "sass": "^1.71.1",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.9.3",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "typescript": "catalog:typescript59tilde",
     "vite": "7.1.12",
     "vite-plugin-inspect": "^11.3.3",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss-children": "catalog:weappChildren"
   },
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
