--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -50,7 +50,7 @@
     "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
+    "@babel/runtime": "catalog:babelRuntime7284",
     "@dcloudio/uni-app": "2.0.2-4070620250821001",
     "@dcloudio/uni-app-plus": "2.0.2-4070620250821001",
     "@dcloudio/uni-h5": "2.0.2-4070620250821001",
@@ -93,22 +93,22 @@
     "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4070620250821001",
     "@dcloudio/webpack-uni-mp-loader": "2.0.2-4070620250821001",
     "@dcloudio/webpack-uni-pages-loader": "2.0.2-4070620250821001",
-    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.3.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "babel-plugin-import": "^1.13.8",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "jest": "^25.5.4",
     "postcss": "^8.5.3",
-    "postcss-comment": "^2.0.0",
+    "postcss-comment": "catalog:postcssComment2",
     "regenerator-transform": "^0.15.1",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-patch": "^8.1.0",
-    "typescript": "~5.9.3",
+    "tailwindcss": "catalog:tailwindcss4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "typescript": "catalog:typescript59tilde",
     "vue-template-compiler": "^2.7.16",
-    "weapp-ide-cli": "^4.0.0",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   },
   "browserslist": [
