--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -8,10 +8,10 @@
     "build": "echo uni-app-x-hbuilderx-tailwindcss3"
   },
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "weapp-ide-cli": "^4.0.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   }
 }
