--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -8,11 +8,11 @@
     "build": "echo uni-app-x-hbuilderx-tailwindcss4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-patch": "^8.1.0",
-    "weapp-ide-cli": "^4.0.0",
+    "@tailwindcss/postcss": "catalog:tailwindcss4",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "tailwindcss": "catalog:tailwindcss4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   }
 }
