--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -14,15 +14,15 @@
     "postcss": "^8.4.38"
   },
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.3.0",
-    "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "postcss-rpx-transform": "^1.0.1",
-    "tailwindcss": "^3.4.18",
-    "tailwindcss-patch": "^8.1.0",
-    "tailwindcss-rem2px-preset": "^1.0.3",
-    "weapp-ide-cli": "^4.0.0",
+    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem602",
+    "postcss-rpx-transform": "catalog:postcssRpx",
+    "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
+    "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss-children": "catalog:weappChildren"
   },
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
