--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.5",
+    "@babel/core": "catalog:babelCore7285",
     "@babel/generator": "~7.28.5",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.7",
@@ -118,8 +118,8 @@
     "@icebreakers/eslint-config": "^1.5.6",
     "@icebreakers/monorepo": "^2.1.0",
     "@icebreakers/stylelint-config": "^1.2.2",
-    "@tailwindcss/postcss": "^4.1.16",
-    "@tailwindcss/vite": "^4.1.16",
+    "@tailwindcss/postcss": "catalog:tailwindcss4",
+    "@tailwindcss/vite": "catalog:tailwindcss4",
     "@tsconfig/recommended": "^1.0.10",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
@@ -161,7 +161,7 @@
     "@weapp-tailwindcss/shared": "workspace:*",
     "@weapp-tailwindcss/test-helper": "workspace:*",
     "anymatch": "^3.1.3",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "catalog:autoprefixer10",
     "babel-loader": "^10.0.0",
     "boxen": "^8.0.1",
     "browserslist": "^4.27.0",
@@ -169,7 +169,7 @@
     "ci-info": "^4.3.1",
     "colorette": "^2.0.20",
     "consola": "^3.4.2",
-    "cross-env": "^10.1.0",
+    "cross-env": "catalog:crossEnv",
     "css-loader": "^7.1.2",
     "css-to-tailwindcss-plugin": "^0.3.0",
     "debug": "4.4.3",
@@ -211,7 +211,7 @@
     "pathe": "^2.0.3",
     "picocolors": "^1.1.1",
     "pkg-types": "^2.3.0",
-    "postcss": "^8.5.6",
+    "postcss": "catalog:postcss85",
     "postcss-js": "^5.0.1",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.2.0",
@@ -226,7 +226,7 @@
     "semver": "7.7.3",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
-    "stylelint": "^16.25.0",
+    "stylelint": "catalog:stylelint1625",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss4": "catalog:tailwindcss4",
     "terser-webpack-plugin": "^5.3.14",
@@ -238,7 +238,7 @@
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "type-fest": "^5.1.0",
-    "typescript": "^5.9.3",
+    "typescript": "catalog:typescript59",
     "unbuild": "^3.6.1",
     "uuid": "^13.0.0",
     "vinyl": "^3.0.1",
@@ -247,7 +247,7 @@
     "vite-plugin-inspect": "^11.3.3",
     "vitest": "~3.2.4",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "5.102.1",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.8.1"
