--- a/packages/merge/package.json
+++ b/packages/merge/package.json
@@ -89,7 +89,7 @@
     "clsx": "^2.1.1",
     "local-pkg": "^1.1.2",
     "semver": "^7.7.3",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "catalog:tailwindMerge",
     "tailwind-merge-v2": "npm:tailwind-merge@^2.6.0",
     "tailwind-variants": "^3.1.1"
   },
