--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -53,8 +53,8 @@
     "@weapp-tailwindcss/shared": "workspace:*",
     "postcss": "~8.5.6",
     "postcss-preset-env": "^10.4.0",
-    "postcss-pxtransform": "^4.1.7",
-    "postcss-rem-to-responsive-pixel": "~6.1.0",
+    "postcss-pxtransform": "catalog:taroPxtransform",
+    "postcss-rem-to-responsive-pixel": "catalog:postcssRem610",
     "postcss-selector-parser": "~7.1.0",
     "postcss-value-parser": "^4.2.0"
   },
