--- a/packages/tailwindcss-injector/package.json
+++ b/packages/tailwindcss-injector/package.json
@@ -57,8 +57,8 @@
     "fs-extra": "^11.3.2",
     "htmlparser2": "^10.0.0",
     "magic-string": "^0.30.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "postcss": "catalog:postcss85",
+    "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-config": "workspace:*"
   }
 }
