--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,13 +55,13 @@
     "main": "./dist/index.css"
   },
   "dependencies": {
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "catalog:tailwindMerge",
     "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.16",
-    "tailwindcss": "^4.1.16",
-    "typescript": "^5.9.3",
+    "@tailwindcss/vite": "catalog:tailwindcss4",
+    "tailwindcss": "catalog:tailwindcss4",
+    "typescript": "catalog:typescript59",
     "vite": "^7.1.12",
     "vite-plugin-dts": "^4.5.4"
   }
