--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,30 @@ packages:
   - demo/*
 
 catalogs:
+  autoprefixer10:
+    autoprefixer: ^10.4.21
+  babelCore7285:
+    '@babel/core': ^7.28.5
+  babelPresetReact7285:
+    '@babel/preset-react': ^7.28.5
+  babelRuntime7284:
+    '@babel/runtime': ^7.28.4
+  babelRuntime7284tilde:
+    '@babel/runtime': ~7.28.4
+  crossEnv:
+    cross-env: ^10.1.0
+  miniApiTypings:
+    miniprogram-api-typings: ^4.1.0
+  postcss85:
+    postcss: ^8.5.6
+  postcssComment2:
+    postcss-comment: ^2.0.0
+  postcssRem602:
+    postcss-rem-to-responsive-pixel: ^6.0.2
+  postcssRem610:
+    postcss-rem-to-responsive-pixel: ^6.1.0
+  postcssRpx:
+    postcss-rpx-transform: ^1.0.1
   react18:
     '@types/react': 18.2.15
     '@types/react-dom': 18.2.7
@@ -20,6 +44,12 @@ catalogs:
     '@types/react-dom': 19.1.13
     react: 19.2.0
     react-dom: 19.2.0
+  reactRefresh018:
+    react-refresh: ^0.18.0
+  stylelint1625:
+    stylelint: ^16.25.0
+  tailwindMerge:
+    tailwind-merge: ^3.3.1
   tailwindcss3:
     tailwindcss: ^3.4.18
   tailwindcss4:
@@ -27,7 +57,52 @@ catalogs:
     '@tailwindcss/vite': ^4.1.16
     tailwindcss: ^4.1.16
     tailwindcss4: npm:tailwindcss@^4.1.16
+  tailwindcssPatch:
+    tailwindcss-patch: ^8.2.0
+  tailwindcssRem:
+    tailwindcss-rem2px-preset: ^1.0.3
+  taro36:
+    '@tarojs/mini-runner': 3.6.37
+    '@tarojs/webpack-runner': 3.6.37
+  taro36legacy:
+    '@tarojs/components': 3.6.17
+  taro4:
+    '@tarojs/cli': 4.1.7
+    '@tarojs/components': 4.1.7
+    '@tarojs/helper': 4.1.7
+    '@tarojs/plugin-framework-react': 4.1.7
+    '@tarojs/plugin-framework-vue3': 4.1.7
+    '@tarojs/plugin-html': 4.1.7
+    '@tarojs/plugin-platform-alipay': 4.1.7
+    '@tarojs/plugin-platform-h5': 4.1.7
+    '@tarojs/plugin-platform-harmony-hybrid': 4.1.7
+    '@tarojs/plugin-platform-jd': 4.1.7
+    '@tarojs/plugin-platform-qq': 4.1.7
+    '@tarojs/plugin-platform-swan': 4.1.7
+    '@tarojs/plugin-platform-tt': 4.1.7
+    '@tarojs/plugin-platform-weapp': 4.1.7
+    '@tarojs/react': 4.1.7
+    '@tarojs/runtime': 4.1.7
+    '@tarojs/shared': 4.1.7
+    '@tarojs/taro': 4.1.7
+    '@tarojs/taro-loader': 4.1.7
+    '@tarojs/vite-runner': 4.1.7
+    '@tarojs/webpack5-runner': 4.1.7
+  taroPxtransform:
+    postcss-pxtransform: ^4.1.7
 
+  typescript59:
+    typescript: ^5.9.3
+  typescript59tilde:
+    typescript: ~5.9.3
+  weappChildren:
+    weapp-tailwindcss-children: ^0.1.0
+  weappIdeCli:
+    weapp-ide-cli: ^4.0.0
+  weappMerge:
+    '@weapp-tailwindcss/merge': ^1.3.0
+  weappVite:
+    weapp-vite: ^5.6.0
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - '@tarojs/binding'
