chore: init weapp-style-injector

--- a/packages/weapp-style-injector/package.json
+++ b/packages/weapp-style-injector/package.json
@@ -38,5 +38,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "dependencies": {
+    "micromatch": "^4.0.8"
+  },
   "publishConfig": {}
 }
