--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -83,6 +83,7 @@
     "vite": "7.1.12",
     "vue-tsc": "^3.1.2",
     "weapp-ide-cli": "catalog:weappIdeCli",
+    "weapp-style-injector": "workspace:*",
     "weapp-tailwindcss": "workspace:*"
   }
 }
