--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -109,6 +109,7 @@
     "typescript": "catalog:typescript59tilde",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "catalog:weappIdeCli",
+    "weapp-style-injector": "workspace:*",
     "weapp-tailwindcss": "workspace:*"
   },
   "browserslist": [
