--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -119,6 +119,7 @@
     "typescript": "catalog:typescript59tilde",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "catalog:weappIdeCli",
+    "weapp-style-injector": "workspace:*",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "catalog:weappChildren"
   },
