chore: fix error

--- a/packages/weapp-style-injector/package.json
+++ b/packages/weapp-style-injector/package.json
@@ -70,7 +70,7 @@
   "scripts": {
     "stub": "unbuild --stub",
     "dev": "tsup --watch --sourcemap",
-    "_build": "tsup",
+    "build": "tsup",
     "test": "vitest run",
     "test:dev": "vitest",
     "release": "pnpm publish",
