chore: bump version

--- a/packages/merge/package.json
+++ b/packages/merge/package.json
@@ -60,7 +60,7 @@
     "release": "pnpm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "postinstall": "node scripts/postinstall.cjs"
+    "postinstall": "node scripts/postinstall.mjs"
   },
   "publishConfig": {
     "exports": {
