chore: sync-template-deps

--- a/templates/taro-react-tailwind-vscode-template/package.json
+++ b/templates/taro-react-tailwind-vscode-template/package.json
@@ -54,7 +54,8 @@
     "@tarojs/taro": "4.1.5",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@weapp-tailwindcss/merge": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
