--- a/templates/mpx-tailwindcss-v4/package.json
+++ b/templates/mpx-tailwindcss-v4/package.json
@@ -21,7 +21,8 @@
     "vue-demi": "^0.14.6",
     "vue-i18n": "^8.27.2",
     "vue-i18n-bridge": "^9.2.2",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "@weapp-tailwindcss/merge": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
