--- a/templates/taro-vue3-tailwind-vscode-template/package.json
+++ b/templates/taro-vue3-tailwind-vscode-template/package.json
@@ -54,7 +54,8 @@
     "@tarojs/runtime": "4.0.5",
     "@tarojs/shared": "4.0.5",
     "@tarojs/taro": "4.0.5",
-    "vue": "^3.5.6"
+    "vue": "^3.5.6",
+    "@weapp-tailwindcss/merge": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
