--- a/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
+++ b/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
@@ -64,7 +64,8 @@
     "@vue/shared": "3.4.21",
     "pinia": "2.2.4",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "@weapp-tailwindcss/merge": "^2.0.1"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
