--- a/templates/uni-app-vue2-tailwind-vscode-template/package.json
+++ b/templates/uni-app-vue2-tailwind-vscode-template/package.json
@@ -77,7 +77,8 @@
     "regenerator-runtime": "^0.14.1",
     "uview-ui": "^2.0.38",
     "vue": "~2.6.14",
-    "vuex": "^3.2.0"
+    "vuex": "^3.2.0",
+    "@weapp-tailwindcss/merge": "^2.0.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-typescript": "^7.27.1",
