--- a/templates/uni-app-vue3-tailwind-hbuilder-template/package.json
+++ b/templates/uni-app-vue3-tailwind-hbuilder-template/package.json
@@ -24,5 +24,8 @@
     "tailwindcss": "3.4.18",
     "vite": "5.4.21",
     "weapp-tailwindcss": "^4.7.0"
+  },
+  "dependencies": {
+    "@weapp-tailwindcss/merge": "^2.0.1"
   }
 }
