--- a/templates/taro-react-tailwind-vscode-template/package.json
+++ b/templates/taro-react-tailwind-vscode-template/package.json
@@ -83,7 +83,12 @@
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.9.2",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.7.0",
+    "weapp-tailwindcss": "^4.7.1",
     "webpack": "5.101.2"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@weapp-tailwindcss/merge"
+    ]
   }
 }
