--- a/templates/taro-vue3-tailwind-vscode-template/package.json
+++ b/templates/taro-vue3-tailwind-vscode-template/package.json
@@ -82,6 +82,11 @@
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.5",
     "weapp-ide-cli": "^4.0.0",
-    "weapp-tailwindcss": "^4.7.0"
+    "weapp-tailwindcss": "^4.7.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@weapp-tailwindcss/merge"
+    ]
   }
 }
