--- a/templates/vue-mini-tailwindcss-template/package.json
+++ b/templates/vue-mini-tailwindcss-template/package.json
@@ -30,13 +30,14 @@
     "sass-embedded": "^1.88.0",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.8.3",
-    "weapp-tailwindcss": "^4.7.0",
+    "weapp-tailwindcss": "^4.7.1",
     "weapp-vite": "^4.1.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
-      "weapp-tailwindcss"
+      "weapp-tailwindcss",
+      "@weapp-tailwindcss/merge"
     ]
   }
 }
