feat: 重构 CLI 结构并改用惰性加载方式获取 `@tailwindcss-mangle/config`

--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -182,6 +182,7 @@
     "@babel/parser": "~7.28.5",
     "@babel/traverse": "~7.28.5",
     "@babel/types": "~7.28.5",
+    "@tailwindcss-mangle/config": "^6.0.1",
     "@vue/compiler-dom": "^3.5.22",
     "@vue/compiler-sfc": "^3.5.22",
     "@weapp-core/escape": "~5.0.1",
@@ -189,6 +190,7 @@
     "@weapp-tailwindcss/logger": "workspace:*",
     "@weapp-tailwindcss/postcss": "workspace:*",
     "@weapp-tailwindcss/shared": "workspace:*",
+    "cac": "^6.7.14",
     "debug": "~4.4.3",
     "htmlparser2": "10.0.0",
     "loader-utils": "2.0.4",
