chore: add @weapp-tailwindcss/merge into onlyBuiltDependencies

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -107,4 +107,5 @@ onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - '@tarojs/binding'
   - '@tarojs/cli'
+  - '@weapp-tailwindcss/merge'
   - esbuild
