--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -12,6 +12,7 @@
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-patch": "catalog:tailwindcssPatch",
     "weapp-ide-cli": "catalog:weappIdeCli",
-    "weapp-tailwindcss": "workspace:*"
+    "weapp-tailwindcss": "workspace:*",
+    "@weapp-tailwindcss/debug-uni-app-x": "workspace:*"
   }
 }
