chore(deps): upgrade

--- a/packages/minify-preserve/package.json
+++ b/packages/minify-preserve/package.json
@@ -13,5 +13,17 @@
   "files": [
     "README.md",
     "examples"
-  ]
+  ],
+  "scripts": {
+    "dev": "tsup --watch --sourcemap",
+    "build": "tsup",
+    "test": "vitest run",
+    "test:dev": "vitest",
+    "release": "pnpm publish",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.15.0"
+  }
 }
